update & fix overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,6 +41,7 @@
 
 pre {
   display: inline;
+  overflow: auto;
 }
 
 h1,
